--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,13 +1,119 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.main {
+  display: flex;
+  padding-top: 20px;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+  background: linear-gradient(0deg, #84bbdb 0%, #84bbdb 100%);
+}
+
+.input_container {
+  border-radius: 5px;
+  background: rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 32px 64px -12px rgba(16, 24, 40, 0.2);
+  width: 860px;
+  height: 117px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  border: none;
+  height: 67px;
+  width: 100%;
+  outline: none;
+  font-size: 23px;
+  padding-left: 20px;
+}
+
+.shortn-btn {
+  width: 166px;
+  height: 60px;
+  border-radius: 5px;
+  background: #940e0e;
+  box-shadow: 0px 32px 64px -12px rgba(16, 24, 40, 0.2);
+  border: none;
+  color: #fff;
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.input-wrap {
+  width: 93%;
+  height: 87px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 32px 64px -12px rgba(16, 24, 40, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.app-title {
+  font-size: 40px;
+  text-align: center;
+  font-weight: 600;
+}
+
+.show-results {
+  height: 339px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  border: 1px solid #e7e9f1;
+  background: #fff;
+  box-shadow: 0px 32px 64px -12px rgba(7, 27, 123, 0.66);
+  padding: 20px;
+}
+
+.single-result {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  align-items: center;
+  height: 153px;
+}
+
+.result-image {
+  display: flex;
+  padding: 10px;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 60px;
+  border: 1px solid #bdbdbd;
+}
+
+.copy {
+  border-radius: 5px;
+  border: 1px solid #f2f2f2;
+  background: #f2f2f2;
+  display: flex;
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 19px;
+  color: #2f80ed;
+  font-size: 20px;
+}
+
+.link {
+  font-size: 20px;
+  line-height: normal;
+  color: #4f4f4f;
 }
