--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -23,7 +23,7 @@ code {
   height: 100vh;
   width: 100%;
   background: linear-gradient(0deg, #84bbdb 0%, #84bbdb 100%);
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .input_container {
@@ -141,4 +141,11 @@ input {
 
 .top-border {
   border-top: 1px solid #bdbdbd;
+}
+
+.redirect{
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
 }
