--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -91,7 +91,7 @@ input {
 
 .single-result {
   display: flex;
-  justify-content: space-;
+  justify-content: space-between;
   width: 100%;
   align-items: center;
   height: 153px;
@@ -128,6 +128,7 @@ input {
 .container {
   height: 50vh;
   overflow-y: scroll;
+  margin-top: 20px;
 }
 
 ::-webkit-scrollbar {
