--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Blinker:wght@200;300;400;600;700;800;900&family=Lato:ital,wght@0,400;0,700;1,400&family=Rubik:ital,wght@0,400;0,500;0,600;0,700;1,300&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Blinker:wght@200;300;400;600;700;800;900&family=Lato:ital,wght@0,400;0,700;1,400&family=Rubik:ital,wght@0,400;0,500;0,600;0,700;1,300&display=swap");
 
 body {
   margin: 0;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif; */
@@ -94,7 +93,7 @@ input {
   justify-content: space-between;
   width: 100%;
   align-items: center;
-  height: 153px;
+  min-height: 153px;
 }
 
 .result-image {
@@ -123,6 +122,8 @@ input {
   font-size: 20px;
   line-height: normal;
   color: #4f4f4f;
+  max-width: 500px;
+  overflow: hidden;
 }
 
 .container {
@@ -145,13 +146,29 @@ input {
   border-top: 1px solid #bdbdbd;
 }
 
-.redirect{
+.redirect {
   display: flex;
   justify-content: center;
   height: 100vh;
   align-items: center;
 }
 
-.delelte-btn{
+.delelte-btn {
   cursor: pointer;
+}
+
+.link-actions {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 3px;
+}
+
+.originalUrl {
+  border-radius: 5px;
+  background: rgba(135, 188, 219, 0.3);
+  color: green;
+  padding: 10px 50px 10px 9px;
+  word-break: normal;
+  word-wrap: normal;
+  margin-top: 10px;
 }
