--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -128,7 +128,7 @@ input {
   overflow-y: scroll;
 }
 
-.search{
+.search {
   margin-top: 20px;
   width: 830px;
   border-bottom: 1px solid #4f4f4f;
@@ -160,7 +160,7 @@ input {
 
 .link-actions {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 3px;
 }
 
@@ -172,4 +172,10 @@ input {
   word-break: normal;
   word-wrap: normal;
   margin-top: 10px;
+}
+
+.not-found {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
 }
